--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "doc": "docs"
   },
   "scripts": {
-    "built:common": "sass ./src/scss/scss_basement/pages/common.scss ./style/common.css --style=compressed --watch"
+    "built:common": "sass ./src/scss/scss_basement/pages/common.scss ./style/common.css --style=compressed --watch",
+    "built:home": "sass ./src/scss/scss_basement/pages/home.scss ./style/home.css --style=compressed --watch"
   },
   "author": "",
   "license": "ISC"
