--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "doc": "docs"
   },
   "scripts": {
-    "built:common": "sass ./src/scss/scss_basement/pages/common.scss ./style/common.css --style=compressed --watch",
-    "built:home": "sass ./src/scss/scss_basement/pages/home.scss ./style/home.css --style=compressed --watch"
+    "build:common": "sass ./src/scss/scss_basement/pages/common.scss ./style/common.css --style=compressed --watch",
+    "build:home": "sass ./src/scss/scss_basement/pages/home.scss ./style/home.css --style=compressed --watch",
+    "build:services": "sass ./src/scss/scss_basement/pages/services.scss ./style/services.css --style=compressed --watch"
   },
   "author": "",
   "license": "ISC",
