--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:home": "sass ./src/scss/scss_basement/pages/home.scss ./style/home.css --style=compressed --watch",
     "build:services": "sass ./src/scss/scss_basement/pages/services.scss ./style/services.css --style=compressed --watch",
     "build:physical-therapy" : "sass ./src/scss/scss_basement/pages/physical-therapy.scss ./style/physical-therapy.css --style=compressed --watch",
-    "build:team": "sass ./src/scss/scss_basement/pages/team.scss ./style/team.css --style=compressed --watch"
+    "build:team": "sass ./src/scss/scss_basement/pages/team.scss ./style/team.css --style=compressed --watch",
+    "build:office": "sass ./src/scss/scss_basement/pages/office.scss ./style/office.css --style=compressed --watch"
   },
   "author": "",
   "license": "ISC",
