--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:common": "sass ./src/scss/scss_basement/pages/common.scss ./style/common.css --style=compressed --watch",
     "build:home": "sass ./src/scss/scss_basement/pages/home.scss ./style/home.css --style=compressed --watch",
     "build:services": "sass ./src/scss/scss_basement/pages/services.scss ./style/services.css --style=compressed --watch",
-    "build:physical-therapy" : "sass ./src/scss/scss_basement/pages/physical-therapy.scss ./style/physical-therapy.css --style=compressed --watch",
+    "build:physical-therapy": "sass ./src/scss/scss_basement/pages/physical-therapy.scss ./style/physical-therapy.css --style=compressed --watch",
     "build:team": "sass ./src/scss/scss_basement/pages/team.scss ./style/team.css --style=compressed --watch",
     "build:office": "sass ./src/scss/scss_basement/pages/office.scss ./style/office.css --style=compressed --watch",
     "build:e-medication": "sass ./src/scss/scss_basement/pages/e-medication.scss ./style/e-medication.css --style=compressed --watch",
@@ -21,8 +21,5 @@
     "build:viewport-animations": "sass ./src/scss/scss_basement/viewport-animations/viewport-animations.scss ./style/viewport-animations.css --style=compressed --watch"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "animate.css": "^4.1.1"
-  }
+  "license": "ISC"
 }
